@@ -1,7 +1,6 @@
 package com.example.mistakes;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.example.mistakes.api.questions.QuestionEntity;
 
@@ -15,6 +14,6 @@ public class QuestionEntityBuilder<T> {
   }
 
   public static Iterable<QuestionEntity> of(Class<?>... cls) {
-    return List.of(cls).stream().map(QuestionEntityBuilder::of).collect(Collectors.toList());
+    return List.of(cls).stream().map(QuestionEntityBuilder::of).toList();
   }
 }
